add new components

--- a/smallChallenge/index.html
+++ b/smallChallenge/index.html
@@ -75,6 +75,20 @@
         </div>
         <button id="changeBackGround">Change Background</button>
     </section>
+    
+    <section>
+        <h2>Form handling</h2>
+        <form id="myform">
+            <label for="feedback">Your feedback : </label>
+            <input type="text" placeholder="Enter feedback" id="feedback">
+            <button type="submit">Submit feedback</button>
+        </form>
+        <h2 id="displayFeedback"></h2>
+    </section>
 
+    <section>
+        <h2>DOMLoaded content</h2>
+        <p id="loadDOM">DOM is loading now........</p>
+    </section>
 </body>
 </html>
