add new feature

--- a/All-projects/miniCalender/index.html
+++ b/All-projects/miniCalender/index.html
@@ -11,11 +11,11 @@
 <body>
 
     <div id="mainDiv">
-        <h1 id="intro">Mini Calender</h1>
+        <h1 class="center" id="month">Mini Calender</h1>
         <div id="break"></div>
-        <p class="center" id="month"></p>
-        <p class="center" id="date"></p>
         <p class="center" id="day"></p>
+        <p class="center" id="date"></p>
+        <p class="center" id="year"></p>
     </div>
 
     <script src="./script.js"></script>
