add new feature

--- a/All-projects/Dictionary/index.html
+++ b/All-projects/Dictionary/index.html
@@ -10,10 +10,10 @@
     <div id="mainDiv">
         <h1 id="intro">My Dictionary</h1>
 
-        <div id="myInputField">
+        <form id="myInputField">
             <input id="query" type="text" placeholder="Type word" autocomplete="off">
-            <button id="searchBtn">Search</button>
-        </div>
+            <button type="submit" id="searchBtn">Search</button>
+        </form>
 
         <div id="displaySection" class="hidden">
             <h2 id="wordDisplay"></h2>
