--- a/All-projects/imageSearch/index.html
+++ b/All-projects/imageSearch/index.html
@@ -12,10 +12,10 @@
     <h1 id="intro">Image Search App</h1>
 
     <!-- search section -->
-    <div id="searchSection">
+    <form id="searchSection">
         <input id="input" placeholder="Search image......" type="text" autocomplete="off">
         <button id="searchBtn" type="submit">Search</button>
-    </div>
+    </form>
 
     <div id="displaySection" class="hidden">
     </div>
