add changes in code base

--- a/All-projects/Age-Calculator/index.html
+++ b/All-projects/Age-Calculator/index.html
@@ -16,7 +16,7 @@
             <button type="submit" id="convertBtn">Convert</button>
     </form>
 
-    <h2 id="result">Your age is __ years old.</h2>
+    <h2 id="result">Your are __ years old.</h2>
 
     <p id="message" class="hidden">Please enter your date of birth</p>
     
